--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   elasticsearch:
     image: 'elasticsearch:7.11.1'
@@ -31,7 +30,7 @@ services:
       - e-logs:/usr/share/elasticsearch/logs
 
   cortex:
-    image: 'thehiveproject/cortex:latest'
+    image: 'thehiveproject/cortex:3.1.7'
     platform: linux/amd64
     restart: unless-stopped
     environment:
