--- a/compose.yml
+++ b/compose.yml
@@ -41,6 +41,12 @@ services:
     depends_on:
       elasticsearch:
         condition: service_healthy
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://cortex:9001 ||  exit 1
+      interval: 10s
+      timeout: 10s
+      retries: 6
+      start_period: 1m
     ports:
       - '0.0.0.0:9001:9001'
 
@@ -61,7 +67,8 @@ services:
       test: ["CMD", "curl", "-f", "http://thehive:9000"]
       interval: 10s
       timeout: 10s
-      retries: 10
+      retries: 6
+      start_period: 1m
     volumes:
       - t-data:/opt/thp
     command: "--cortex-keys $CORTEX_KEY --cortex-port 9001"
